--- a/public/css/app.css
+++ b/public/css/app.css
@@ -66,7 +66,7 @@ section {
 
 body {
   margin: 0;
-  font-family: 'Ubuntu', sans-serif;
+  font-family: "Nunito", sans-serif;
   font-size: 0.9rem;
   font-weight: 400;
   line-height: 1.6;
@@ -10960,5 +10960,13 @@ a.text-dark:focus {
     color: inherit;
     border-color: #dee2e6;
   }
+}
+
+img {
+  max-width: 100%;
+}
+
+.previous-image img {
+  width: 180px;
 }
 
