--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -2,7 +2,9 @@
 @import url('https://fonts.googleapis.com/css?family=Nunito');
 
 // Variables
-@import 'variables';
+@import 'partials/variables';
+@import 'partials/general';
+@import 'partials/header';
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
