menu btn aggiornato

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11,10 +11,31 @@ a {
 
 .header .btn-menu {
   background-color: lightblue;
-  border-radius: 20px;
+  border-radius: 25px;
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.header .btn-menu .burger-icon {
+  font-size: 17px;
+}
+
+.header .btn-menu .circle {
+  border: 1px solid black;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  vertical-align: middle;
+  margin-left: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+  font-weight: 600;
 }
 
 /*!
