--- a/resources/sass/partials/_header.scss
+++ b/resources/sass/partials/_header.scss
@@ -2,28 +2,50 @@
     
     .btn-menu {
         background-color: lightblue;
-        border-radius: 20px;
+        border-radius: 25px;
         width: fit-content;
+        position: relative;
+        display: flex;
+        align-items: center;
 
+        .burger-icon {
+            // display: inline-block;
+            font-size: 17px;
+        }
+
+        .circle{
+            border: 1px solid black;
+            width: 30px;
+            height: 30px;
+            // display: inline-block;
+            border-radius: 50%;
+            vertical-align:  middle;
+            margin-left: 15px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 18px;
+            font-weight: 600;
+        }
         // .icon-one {
-        //     // position: absolute;
-        //     position: relative;
-        //     // top: 10%;
-        //     // left: 10%;
+        //     position: absolute;
+        //     // position: relative;
+        //     top: 10%;
+        //     left: 10%;
         //     width: 40px;
         //     height: 40px;
         //     cursor: pointer;
 
         //     .hamburger {
         //         top:50%;
-        //         // left:10%;
+        //         left:10%;
         //         width: 20px;
         //         height: 3px;
         //         background: #000000;
         //         position: absolute;
                 
         //         // box-shadow: 0 2px 5px rgba(0, 0, 0, .2);
-        //         transition: 0.5s;
+        //         // transition: 0.5s;
         //       }
         //       .hamburger::before {
         //         top: -7px;
@@ -39,7 +61,7 @@
         //         height: 3px;
         //         background:#000000;
         //         // box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-        //         transition:0.5s;
+        //         // transition:0.5s;
         //       }
               
         //       .icon-one.active-one .hamburger-one {
@@ -47,16 +69,16 @@
         //         // box-shadow: 0 2px 5px rgba(0, 0, 0, 0);
         //       }
               
-        //       .icon-one.active-one .hamburger-one::before {
-        //         top: 0;
-        //         transform:rotate(45deg);
-        //       }
+        //     //   .icon-one.active-one .hamburger-one::before {
+        //     //     top: 0;
+        //     //     transform:rotate(45deg);
+        //     //   }
               
-        //       .icon-one.active-one .hamburger-one::after {
-        //         top: 0;
-        //         transform:rotate(135deg);
-        //         // box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
-        //       }
+        //     //   .icon-one.active-one .hamburger-one::after {
+        //     //     top: 0;
+        //     //     transform:rotate(135deg);
+        //     //     // box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
+        //     //   }
             
         //}
  
