--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -5,6 +5,7 @@
 @import 'partials/variables';
 @import 'partials/general';
 @import 'partials/header';
+@import 'partials/visuals';
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
