--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,11 +1,13 @@
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Nunito');
+@import '~@fortawesome/fontawesome-free/css/all.css';
 
 // Variables
 @import 'partials/variables';
 @import 'partials/general';
 @import 'partials/header';
 @import 'partials/visuals';
+@import 'partials/dashboard';
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
