--- a/resources/sass/partials/_header.scss
+++ b/resources/sass/partials/_header.scss
@@ -1,3 +1,6 @@
+// Import
+@import '/variables';
+
 .header {
     
     .btn-menu {
@@ -27,6 +30,7 @@
             font-size: 18px;
             font-weight: 600;
         }
+
         // .icon-one {
         //     position: absolute;
         //     // position: relative;
@@ -82,5 +86,15 @@
             
         //}
  
+    }
+
+    .dropdown-menu {
+
+        .dropdown-icon {
+            margin-right: 10px;
+            color: $brand_primary_color;
+            filter: brightness(0.9);
+        }
+
     }
 }
