--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,6 +8,8 @@
 @import 'partials/header';
 @import 'partials/visuals';
 @import 'partials/dashboard';
+@import 'partials/location_show';
+@import 'partials/sponsor';
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
