--- a/resources/sass/partials/_general.scss
+++ b/resources/sass/partials/_general.scss
@@ -6,3 +6,10 @@ a {
     text-decoration: none;
     color: inherit;
 }
+
+// Sponsor Button
+.subscription{
+    border: 1px solid lightgray;
+    padding: 6px 15px;
+    border-radius: 25px;
+}
