--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -10,6 +10,7 @@
 @import 'partials/dashboard';
 @import 'partials/location_show';
 @import 'partials/sponsor';
+@import 'partials/scrollbar';
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
