Show Back office

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4616,8 +4616,11 @@ a {
 
 .subscription {
   border: 1px solid lightgray;
-  padding: 6px 15px;
+  padding: 20px 15px;
   border-radius: 25px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
 }
 
 .my_d_none {
@@ -4724,6 +4727,7 @@ section#show .big_picture {
   height: 50vh;
   margin: auto;
   display: flex;
+  border-radius: 20px !important;
 }
 
 section#show .button {
