--- a/resources/sass/partials/_location_show.scss
+++ b/resources/sass/partials/_location_show.scss
@@ -11,6 +11,7 @@ section#show {
         height: 50vh;
         margin: auto;
         display: flex;
+        border-radius: 20px !important;
     }
 
     .button {
