--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -3,14 +3,14 @@
 @import '~@fortawesome/fontawesome-free/css/all.css';
 
 // Variables
-@import 'partials/variables';
-@import 'partials/general';
-@import 'partials/header';
-@import 'partials/visuals';
-@import 'partials/dashboard';
-@import 'partials/location_show';
-@import 'partials/sponsor';
-@import 'partials/scrollbar';
+@import './partials/variables';
+@import './partials/general';
+@import './partials/header';
+@import './partials/visuals';
+@import './partials/dashboard';
+@import './partials/location_show';
+@import './partials/sponsor';
+@import './partials/scrollbar';
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
