--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4614,15 +4614,6 @@ a {
   color: inherit;
 }
 
-.subscription {
-  border: 1px solid lightgray;
-  padding: 20px 15px;
-  border-radius: 25px;
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-}
-
 .my_d_none {
   display: none;
 }
@@ -4764,20 +4755,42 @@ section#show .button--green:hover {
   color: white;
 }
 
+section#sponsor a {
+  text-decoration: none;
+}
+
 section#sponsor .location {
-  border: 1px solid lightgray;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
   margin: 10px 0;
-  padding: 15px 15px;
+  padding: 5px 15px;
   border-radius: 50px;
+  background-color: rgba(192, 192, 192, 0.103);
 }
 
 section#sponsor .location-name {
   display: inline-block;
   line-height: 35px;
+  margin-left: 20px;
 }
 
 section#sponsor .gold {
   background-color: yellow;
+}
+
+section#sponsor .subscription {
+  box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;
+  padding: 10px 20px;
+  border-radius: 25px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  background-color: rgba(199, 235, 247, 0.466);
+}
+
+section#sponsor .subscription:hover {
+  transform: scale(1.1);
+  transition: transform 1s;
+  text-decoration: none;
 }
 
 ::-webkit-scrollbar {
