--- a/resources/sass/partials/_sponsor.scss
+++ b/resources/sass/partials/_sponsor.scss
@@ -1,18 +1,43 @@
 section#sponsor {
 
+    a {
+        text-decoration: none;
+    }
+
     .location {
-        border: 1px solid lightgray;
+        // border: 1px solid lightgray;
+        box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
         margin: 10px 0;
-        padding: 15px 15px;
+        padding: 5px 15px;
         border-radius: 50px;
+        background-color: rgba(192, 192, 192, 0.103);
     }
 
     .location-name {
         display: inline-block;
         line-height: 35px;
+        margin-left: 20px;
     }
 
     .gold {
         background-color: yellow;
+    }
+
+    // Sponsor Button
+    .subscription {
+        // border: 1px solid lightgray;
+        box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;
+        padding: 10px 20px;
+        border-radius: 25px;
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        background-color: rgba(199, 235, 247, 0.466);
+    }
+
+    .subscription:hover {
+        transform: scale(1.1);
+        transition: transform 1s;
+        text-decoration: none;
     }
 }
