--- a/resources/sass/partials/_header.scss
+++ b/resources/sass/partials/_header.scss
@@ -14,6 +14,9 @@
         .burger-icon {
             // display: inline-block;
             font-size: 17px;
+            i{
+                color: black;
+            }
         }
 
         .circle{
