--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4618,6 +4618,16 @@ a {
   display: none;
 }
 
+.subscription {
+  box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;
+  padding: 10px 20px;
+  border-radius: 25px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  background-color: rgba(199, 235, 247, 0.466);
+}
+
 .header .btn-menu {
   background-color: lightblue;
   border-radius: 25px;
